@@ -23,11 +23,12 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
     compile 'org.apache.logging.log4j:log4j-api:2.17.1'
     compile 'org.apache.logging.log4j:log4j-core:2.17.1'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
-    compile 'org.springframework:spring-beans:5.3.0'
-    compile 'org.springframework:spring-jdbc:5.3.0'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.7.0.0'
+    compile 'org.springframework:spring-beans:5.3.1'
+    compile 'org.springframework:spring-jdbc:5.3.1'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
