@@ -1,14 +1,16 @@
 package edu.mcw.rgd.pipelines.agr;
 
 import edu.mcw.rgd.dao.DataSourceFactory;
-import edu.mcw.rgd.dao.impl.MapDAO;
-import edu.mcw.rgd.dao.impl.SampleDAO;
+import edu.mcw.rgd.dao.impl.*;
 import edu.mcw.rgd.dao.impl.variants.VariantDAO;
+import edu.mcw.rgd.dao.spring.IntStringMapQuery;
 import edu.mcw.rgd.dao.spring.StringListQuery;
 import edu.mcw.rgd.dao.spring.variants.VariantMapQuery;
 import edu.mcw.rgd.dao.spring.variants.VariantSampleQuery;
 import edu.mcw.rgd.dao.spring.variants.VariantTranscriptQuery;
 import edu.mcw.rgd.datamodel.Sample;
+import edu.mcw.rgd.datamodel.XdbId;
+import edu.mcw.rgd.datamodel.ontology.Annotation;
 import edu.mcw.rgd.datamodel.variants.VariantMapData;
 import edu.mcw.rgd.datamodel.variants.VariantSampleDetail;
 import edu.mcw.rgd.datamodel.variants.VariantTranscript;
@@ -16,8 +18,10 @@ import org.springframework.jdbc.core.SqlParameter;
 
 import javax.sql.DataSource;
 import java.sql.Types;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author mtutaj
@@ -26,7 +30,10 @@ import java.util.Map;
  */
 public class Dao {
 
+    private AnnotationDAO annotationDAO = new AnnotationDAO();
     private MapDAO mapDAO = new MapDAO();
+    private ReferenceDAO refDAO = new ReferenceDAO();
+    private XdbIdDAO xdbIdDAO = new XdbIdDAO();
     private edu.mcw.rgd.dao.impl.variants.VariantDAO variantDAO = new VariantDAO();
 
     public String getConnectionInfo() {
@@ -97,4 +104,60 @@ public class Dao {
         VariantTranscriptQuery q = new VariantTranscriptQuery(getVariantDataSource(), query);
         return q.execute(params);
     }
+
+
+
+    public List<Annotation> getAnnotationsBySpecies(int speciesTypeKey, String aspect, String source) throws Exception {
+        return annotationDAO.getAnnotationsBySpeciesAspectAndSource(speciesTypeKey, aspect, source);
+    }
+
+    public String getOmimPSTermAccForChildTerm(String childTermAcc) throws Exception {
+
+        String parentTermAcc = _omimPSCache.get(childTermAcc);
+        if( parentTermAcc==null ) {
+            String sql = "SELECT term_acc FROM ont_synonyms WHERE synonym_name IN\n" +
+                    "(SELECT phenotypic_series_number omim_ps FROM omim_phenotypic_series WHERE phenotype_mim_number IN\n" +
+                    " (SELECT synonym_name FROM ont_synonyms WHERE term_acc=? AND synonym_name like 'OMIM:______')" +
+                    ")";
+            List<String> termAccIds = StringListQuery.execute(annotationDAO, sql, childTermAcc);
+            if (termAccIds.isEmpty()) {
+                parentTermAcc = "";
+            }
+            else if (termAccIds.size() > 1) {
+                //counters.increment("OMIM:PS problem: multiple OMIM:PS parents for child term " + childTermAcc + ": " + Utils.concatenate(termAccIds, ","));
+                parentTermAcc = "";
+            } else {
+                parentTermAcc = termAccIds.get(0);
+            }
+
+            _omimPSCache.put(childTermAcc, parentTermAcc);
+        }
+
+        if( parentTermAcc==null || parentTermAcc.isEmpty() ) {
+            return null;
+        }
+        return parentTermAcc;
+    }
+    static Map<String,String> _omimPSCache = new ConcurrentHashMap<>();
+
+
+    public String getPmid(int refRgdId) throws Exception {
+        if( _pmidMap==null ) {
+            List<IntStringMapQuery.MapPair> pmidList = refDAO.getPubmedIdsAndRefRgdIds();
+            _pmidMap = new HashMap<>(pmidList.size());
+            for (IntStringMapQuery.MapPair pair : pmidList) {
+                String pmid = _pmidMap.put(pair.keyValue, pair.stringValue);
+                if( pmid != null ) {
+                    System.out.println("multiple PMIDs for REF_RGD_ID:"+pair.keyValue+", PMID:"+pmid);
+                }
+            }
+        }
+        return _pmidMap.get(refRgdId);
+    }
+    Map<Integer,String> _pmidMap;
+
+    public List<XdbId> getActiveXdbIds(int xdbKey, int objectKey) throws Exception {
+        return xdbIdDAO.getActiveXdbIds(xdbKey, objectKey);
+    }
+
 }
