@@ -1,2 +1,5 @@
+Mar 16, 2022
+  added CurationDafGenerator -- generates daf file for HUMAN, gene-disease annotations
+
 Feb 16, 2022
   added module VariantVcfGenerator, to produce VCF file with high throughput variants for rn7 assembly in VCF format
